[gd_scene load_steps=2 format=3 uid="uid://cerror_dialog_001"]

[ext_resource type="Script" path="res://features/ui/components/error_dialog/error_dialog.gd" id="1"]

[node name="ErrorDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogPanel" type="Panel" parent="Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -175.0
offset_right = 250.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Overlay/DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/DialogPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleContainer" type="HBoxContainer" parent="Overlay/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Overlay/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Error"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Overlay/DialogPanel/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "X"

[node name="MessageLabel" type="Label" parent="Overlay/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "An error occurred"
autowrap_mode = 3

[node name="DetailsLabel" type="Label" parent="Overlay/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Details..."
autowrap_mode = 3

[node name="CodeLabel" type="Label" parent="Overlay/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Error Code: 500"

[node name="ActionsContainer" type="HBoxContainer" parent="Overlay/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1